<resources>
    <string name="Slam">Navigation and walking</string>
    <string name="action_demo">Actions and expressions</string>
    <string name="alice_action">Alice\'s action</string>
    <string name="alice_angry">Alice is angry</string>
    <string name="alice_expression">Alice\'s expression</string>
    <string name="alice_happy">Alice is happy</string>
    <string name="alice_lighting">Alice\'s lightning</string>
    <string name="alice_normal">Alice is ordinary</string>
    <string name="alice_sad">Alice is sad</string>
    <string name="alice_sleepy">Alice is tired</string>
    <string name="app_name">Pangolin SDKDemo</string>
    <string name="asr_nlp">Speech recognition and semantic understanding</string>
    <string name="auto_test_off">Automatic testing (off)</string>
    <string name="auto_test_on">Automatic testing (on)</string>
    <string name="cancel_register">Unregister</string>
    <string name="close_preview">close preview</string>
    <string name="content_is_null">The content is empty</string>
    <string name="delete_chosen_face">Delete Selected</string>
    <string name="demo">Pangolin Robot Demo</string>
    <string name="do_not_register_again">You have already registered, please do not register again</string>
    <string name="emergency_pressed">Emergency stop pressed</string>
    <string name="emergency_released">Emergency stop release</string>
    <string name="face_demo">Facial recognition and registration</string>
    <string name="face_register">register</string>
    <string name="get_all_person">Get all registered individuals</string>
    <string name="get_pose">Obtain coordinates</string>
    <string name="get_pose_ok">Coordinate acquisition successful</string>
    <string name="have_no_person">unmanned</string>
    <string name="have_person">Someone</string>
    <string name="head_down">Bow your head</string>
    <string name="head_left">Head left turn (30)</string>
    <string name="head_right">Turn your head right (70)</string>
    <string name="head_up">look up</string>
    <string name="hello">Hello!</string>
    <string name="im_here">I\'m here!</string>
    <string name="in_charge">During charging</string>
    <string name="info_sensor">Robot information and sensors</string>
    <string name="keep_smail">Please keep smiling, gaze at the camera, and start the countdown,</string>
    <string name="left_arm_down">Left placement</string>
    <string name="left_arm_up">Lift left</string>
    <string name="map_not_restored">The map has not been restored</string>
    <string name="map_restore_result">Map recovery result:</string>
    <string name="map_restored">The map has been restored</string>
    <string name="move_speed">The walking speed is</string>
    <string name="navi_arrived">It\'s already here!</string>
    <string name="navi_cancel">Task cancellation</string>
    <string name="navi_msg_send_ok">Navigation message successfully sent, on its way</string>
    <string name="not_charge">Not charging</string>
    <string name="not_overload">The motor is not overloaded</string>
    <string name="open_preview">Open Preview</string>
    <string name="overload">motor overload</string>
    <string name="person_chosen">Person selection:</string>
    <string name="person_status">Person status:</string>
    <string name="please_enter_name">enter one user name</string>
    <string name="please_retry">It seems that no face was detected, please try again</string>
    <string name="please_try_later">I am currently navigating, please try again later</string>
    <string name="pose1">position 1</string>
    <string name="pose2">Position 2</string>
    <string name="rec_show">Receive display</string>
    <string name="register_ok">registered successfully</string>
    <string name="reset">reset</string>
    <string name="right_arm_down">Put it on the right</string>
    <string name="right_arm_up">Lift it to the right</string>
    <string name="send_show">Send display</string>
    <string name="take_picture">take pictures</string>
    <string name="wakeup_angle">Pick up angle %1$d degrees</string>
    <string name="power">Real time battery level:</string>
    <string name="charge_state">Charging status:</string>
    <string name="save_map">save map</string>
    <string name="load_map">Restore map</string>
    <string name="query_load_state">Query map status</string>
    <string name="turn_right_60">Turn right 60 degrees</string>
    <string name="turn_left_60">Turn 60 degrees to the left</string>
    <string name="turn_right_to_60">Turn to 60 degrees (relative to the power on position)</string>
    <string name="navi_state">Navigation status:</string>
    <string name="get_pose_1">Retrieve and save location 1</string>
    <string name="navi_to_pose_1">Navigate to position 1</string>
    <string name="get_pose_2">Retrieve and save location 2</string>
    <string name="navi_to_pose_2">Navigate to position 2</string>
    <string name="cancel_navi">Cancel navigation</string>
    <string name="go_home_charge">Go back and charge</string>
    <string name="get_navi_speed">Get navigation speed</string>
    <string name="set_navi_speed_05">Set the speed to 0.5 meters per second</string>
    <string name="set_navi_speed_07">Set the speed to 0.7 meters per second</string>
    <string name="open_asr_service">Activate voice service</string>
    <string name="close_asr_service">Turn off voice service</string>
    <string name="open_muti_asr">Enable multiple voice recognition</string>
    <string name="close_muti_asr">Disable multiple voice recognition</string>
    <string name="wake_up_angle">Awakening angle (awakening word: Lingxi Lingxi):</string>
    <string name="asr_result">ASR results:</string>
    <string name="nlp_result">NLP results:</string>
    <string name="text_to_speech">TTS Broadcast</string>
    <string name="sdk_version">SDK version number:</string>
    <string name="robot_sn">Robot SN:</string>
    <string name="robot_type">Robot type:</string>
    <string name="robot_hw_info">Robot hardware information:</string>
    <string name="get_robot_hw_info">Obtain hardware information</string>
    <string name="emergency_stop_state">Get emergency stop status:</string>
    <string name="get_emergency_stop_state">Get emergency stop status</string>
    <string name="moto_overload_state">Motor overload query:</string>
    <string name="get_moto_overload_state">Motor overload inquiry</string>
    <string name="get_robot_type">Obtain the type of robot</string>
    <string name="get_robot_sn">Get Robot SN</string>
    <string name="conncet_to_sdk">Connecting robot</string>
    <string name="title_activity_elevator_demo">ElevatorDemoActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="elevator">elevator</string>
    <string name="reliever_overload">Relieve Overload</string>
    <string name="muti_map">Multi map testing</string>
    <string name="Amanda_action">Amanda action</string>
    <string name="snow_action">snow Action</string>
    <string name="get_map_list">Get map list</string>
    <string name="open_double_door">Open both doors</string>
    <string name="close_double_door">Double door closed</string>
    <string name="head_middle">Head back straight</string>
    <string name="page_back">return</string>
</resources>
