<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/demo"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openASrNlpPage"
        android:text="@string/asr_nlp"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openSlamDemo"
        android:text="@string/Slam"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openFaceDemo"
        android:visibility="gone"
        android:text="@string/face_demo"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openAction"
        android:text="@string/action_demo"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openInfo"
        android:text="@string/info_sensor"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openElevator"
        android:visibility="gone"
        android:text="@string/elevator"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/mutiMapText"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:onClick="openMutiMapDelivery"
        android:text="@string/muti_map"
        android:textAllCaps="false" />

</LinearLayout>
